[gd_scene load_steps=8 format=3 uid="uid://bx4o5i8xbsl8y"]

[ext_resource type="Theme" uid="uid://bmintbtqkb0y" path="res://ui/main_menu_ui.tres" id="1_qhsqa"]
[ext_resource type="Script" uid="uid://lvwk0g52lrel" path="res://code/main_menu.gd" id="2_14rb7"]

[sub_resource type="Gradient" id="Gradient_a3uwa"]
colors = PackedColorArray(0.494118, 0.145098, 0.32549, 1, 0, 0, 0, 1)
metadata/_snap_count = 2

[sub_resource type="FastNoiseLite" id="FastNoiseLite_uhsc8"]
noise_type = 3

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_krnpu"]
width = 1920
height = 1080
color_ramp = SubResource("Gradient_a3uwa")
noise = SubResource("FastNoiseLite_uhsc8")

[sub_resource type="InputEventKey" id="InputEventKey_jte8l"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_vrkw4"]
events = [SubResource("InputEventKey_jte8l")]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme = ExtResource("1_qhsqa")
script = ExtResource("2_14rb7")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = SubResource("NoiseTexture2D_krnpu")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
layout_mode = 2

[node name="start" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/MarginContainer"]
layout_mode = 2
theme_override_constants/outline_size = 64
theme_override_font_sizes/font_size = 192
text = " Start "

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="skins" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 64
text = "skins
"

[node name="settings" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 64
disabled = true
text = "Settings"

[node name="exit" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_vrkw4")
text = "Exit
"

[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer2/MarginContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/skins" to="." method="_on_skins_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/exit" to="." method="_on_exit_pressed"]
